@@ -1,11 +1,11 @@
-/**
- *    Copyright 2009-2019 the original author or authors.
+/*
+ *    Copyright 2009-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -23,7 +23,7 @@ import java.util.Map;
  */
 public class LanguageDriverRegistry {
 
-  private final Map<Class<? extends LanguageDriver>, LanguageDriver> LANGUAGE_DRIVER_MAP = new HashMap<>();
+  private final Map<Class<? extends LanguageDriver>, LanguageDriver> languageDriverMap = new HashMap<>();
 
   private Class<? extends LanguageDriver> defaultDriverClass;
 
@@ -31,13 +31,13 @@ public class LanguageDriverRegistry {
     if (cls == null) {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
-    if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
+    languageDriverMap.computeIfAbsent(cls, k -> {
       try {
-        LANGUAGE_DRIVER_MAP.put(cls, cls.newInstance());
+        return k.getDeclaredConstructor().newInstance();
       } catch (Exception ex) {
         throw new ScriptingException("Failed to load language driver for " + cls.getName(), ex);
       }
-    }
+    });
   }
 
   public void register(LanguageDriver instance) {
@@ -45,13 +45,13 @@ public class LanguageDriverRegistry {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
     Class<? extends LanguageDriver> cls = instance.getClass();
-    if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
-      LANGUAGE_DRIVER_MAP.put(cls, instance);
+    if (!languageDriverMap.containsKey(cls)) {
+      languageDriverMap.put(cls, instance);
     }
   }
 
   public LanguageDriver getDriver(Class<? extends LanguageDriver> cls) {
-    return LANGUAGE_DRIVER_MAP.get(cls);
+    return languageDriverMap.get(cls);
   }
 
   public LanguageDriver getDefaultDriver() {
