@@ -1,11 +1,11 @@
-/**
- *    Copyright 2009-2019 the original author or authors.
+/*
+ *    Copyright 2009-2024 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,7 +18,6 @@ package org.apache.ibatis.reflection.factory;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -41,8 +40,8 @@ class DefaultObjectFactoryTest {
   @Test
   void createClass() {
     DefaultObjectFactory defaultObjectFactory = new DefaultObjectFactory();
-    TestClass testClass = defaultObjectFactory.create(TestClass.class,
-        Arrays.asList(String.class, Integer.class), Arrays.asList("foo", 0));
+    TestClass testClass = defaultObjectFactory.create(TestClass.class, Arrays.asList(String.class, Integer.class),
+        Arrays.asList("foo", 0));
 
     Assertions.assertEquals((Integer) 0, testClass.myInteger, "myInteger didn't match expected");
     Assertions.assertEquals("foo", testClass.myString, "myString didn't match expected");
@@ -52,7 +51,7 @@ class DefaultObjectFactoryTest {
   void createClassThrowsProperErrorMsg() {
     DefaultObjectFactory defaultObjectFactory = new DefaultObjectFactory();
     try {
-      defaultObjectFactory.create(TestClass.class, Collections.singletonList(String.class), Collections.singletonList("foo"));
+      defaultObjectFactory.create(TestClass.class, List.of(String.class), List.of("foo"));
       Assertions.fail("Should have thrown ReflectionException");
     } catch (Exception e) {
       Assertions.assertTrue(e instanceof ReflectionException, "Should be ReflectionException");
@@ -62,10 +61,10 @@ class DefaultObjectFactoryTest {
   }
 
   @Test
-  void creatHashMap() {
-     DefaultObjectFactory defaultObjectFactory=new DefaultObjectFactory();
-     Map  map= defaultObjectFactory.create(Map.class,null,null);
-     Assertions.assertTrue(map instanceof HashMap, "Should be HashMap");
+  void createHashMap() {
+    DefaultObjectFactory defaultObjectFactory = new DefaultObjectFactory();
+    Map map = defaultObjectFactory.create(Map.class, null, null);
+    Assertions.assertTrue(map instanceof HashMap, "Should be HashMap");
   }
 
   @Test
